[project]
name = "vpwenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dask[distributed]>=2025.10.0",
    "h5netcdf>=1.7.3",
    "hvplot>=0.12.1",
    "icechunk>=1.1.11",
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scipy>=1.16.3",
    "xarray>=2025.10.1",
]
